# tree-sitter-somnium

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-somnium.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_somnium/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSomnium/: somnium.h
bindings/swift/TreeSitterSomniumTests/: TreeSitterSomniumTests.swift
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
